--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -1,206 +1,241 @@
-body {
-	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background-color: #0082b4;
-	margin: 0;
-	padding: 0;
-	color: #000;
-	height:100%;
-}
-
-h1, h2, h3, h4, h5, h6, p {
-	margin-top: 0;
-	padding-right: 15px;
-	padding-left: 15px;
-}
-
-
-/* ~~ this container surrounds all other divs giving them their percentage-based width ~~ */
-.container {
-	/*width: 80%;*/
-	/*max-width: 1260px;/* a max-width may be desirable to keep this layout from getting too wide on a large monitor. This keeps line length more readable. IE6 does not respect this declaration. */
-	/*min-width: 780px;/* a min-width may be desirable to keep this layout from getting too narrow. This keeps line length more readable in the side columns. IE6 does not respect this declaration. */
-	background-color: #FFF;
-	margin: 0 auto; /* the auto value on the sides, coupled with the width, centers the layout. It is not needed if you set the .container's width to 100%. */
-	height:100%;
-}
-
-/* ~~ the header is not given a width. It will extend the full width of your layout. It contains an image placeholder that should be replaced with your own linked logo ~~ */
-.header {
-	background-color: #0082b4;
-	display:block;
-}
-caption {
-	background-color:gray;
-	color:white;
-	border:3px solid black;
-}
-
-
-.content {
-	padding: 10px 0;
-	width: 60%;
-	float: left;
-}
-
-/* ~~ This grouped selector gives the lists in the .content area space ~~ */
-.content ul, .content ol { 
-	padding: 0 15px 15px 40px; /* this padding mirrors the right padding in the headings and paragraph rule above. Padding was placed on the bottom for space between other elements on the lists and on the left to create the indention. These may be adjusted as you wish. */
-}
-
-
-
-/* ~~ The footer ~~ */
-.footer {
-	padding: 10px 0;
-	background-color: #00adef;
-	position: relative;
-	clear: both;
-	color:white;
-}
-.form-1 {
-    /* Size & position */
-    width: 300px;
-    margin: 60px auto 30px;
-    padding: 10px;
-    position: relative; /* For the submit button positioning */
- 
-    /* Styles */
-    box-shadow: 
-        0 0 1px rgba(0, 0, 0, 0.3), 
-        0 3px 7px rgba(0, 0, 0, 0.3), 
-        inset 0 1px rgba(255,255,255,1),
-        inset 0 -3px 2px rgba(0,0,0,0.25);
-    border-radius: 5px;
-    background: linear-gradient(#eeefef, #ffffff 10%);
-}
- 
-.form-1 .field {
-    position: relative; /* For the icon positioning */
-}
-.form-1 .field i {
-    /* Size and position */
-    left: 0px;
+#subscribe, 
+#login{
+    position: absolute;
     top: 0px;
-    position: absolute;
-    height: 36px;
-    width: 36px;
- 
-    /* Line */
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 1px 0 0 rgba(255, 255, 255, 0.7);
- 
-    /* Styles */
-    color: #777777;
+    width: 88%; 
+    padding: 18px 6% 60px 6%;
+    margin: 0 0 35px 0;
+    background: rgb(247, 247, 247);
+    border: 1px solid rgba(147, 184, 189,0.8);
+    box-shadow: 
+        0pt 2px 5px rgba(105, 108, 109,  0.7),  
+        0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    border-radius: 5px;
+}
+#login{
+    z-index: 22;
+}
+/**** general text styling ****/
+#wrapper h1{
+    font-size: 48px;
+    color: rgb(6, 106, 117);
+    padding: 2px 0 10px 0;
+    font-family: 'FranchiseRegular','Arial Narrow',Arial,sans-serif;
+    font-weight: bold;
     text-align: center;
-    line-height: 42px;
-    transition: all 0.3s ease-out;
-    pointer-events: none;
+    padding-bottom: 30px;
 }
-.form-1 input[type=text],
-.form-1 input[type=password] {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    text-shadow: 0 1px 0 rgba(255,255,255,0.8);
  
-    /* Size and position */
-    width: 100%;
-    padding: 10px 18px 10px 45px;
+/** For the moment only webkit supports the background-clip:text; */
+#wrapper h1{
+    background: 
+    -webkit-repeating-linear-gradient(-45deg, 
+        rgb(18, 83, 93) , 
+        rgb(18, 83, 93) 20px,
+        rgb(64, 111, 118) 20px,
+        rgb(64, 111, 118) 40px,
+        rgb(18, 83, 93) 40px);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
  
-    /* Styles */
-    border: none; /* Remove the default border */
-    box-shadow: 
-        inset 0 0 5px rgba(0,0,0,0.1),
-        inset 0 3px 2px rgba(0,0,0,0.1);
+#wrapper h1:after{
+    content:' ';
+    display:block;
+    width:100%;
+    height:2px;
+    margin-top:10px;
+    background: 
+        linear-gradient(left,  
+            rgba(147,184,189,0) 0%,
+            rgba(147,184,189,0.8) 20%,
+            rgba(147,184,189,1) 53%,
+            rgba(147,184,189,0.8) 79%,
+            rgba(147,184,189,0) 100%); 
+}
+/**** advanced input styling ****/
+/* placeholder */
+::-webkit-input-placeholder  { 
+    color: rgb(190, 188, 188); 
+    font-style: italic;
+}
+input:-moz-placeholder,
+textarea:-moz-placeholder{ 
+    color: rgb(190, 188, 188);
+    font-style: italic;
+} 
+input {
+  outline: none;
+}
+/* all the input except submit and checkbox */
+#wrapper input:not([type="checkbox"]){
+    width: 92%;
+    margin-top: 4px;
+    padding: 10px 5px 10px 32px;    
+    border: 1px solid rgb(178, 178, 178);
+    box-sizing : content-box;
     border-radius: 3px;
-    background: #f9f9f9;
-    color: #777;
-    transition: color 0.3s ease-out;
+    box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+    transition: all 0.2s linear;
+}
+#wrapper input:not([type="checkbox"]):active,
+#wrapper input:not([type="checkbox"]):focus{
+    border: 1px solid rgba(91, 90, 90, 0.7);
+    background: rgba(238, 236, 240, 0.2);   
+    box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.9) inset;
+} 
+@font-face {
+    font-family: 'FontomasCustomRegular';
+    src: url('fonts/fontomas-webfont.eot');
+    src: url('fonts/fontomas-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/fontomas-webfont.woff') format('woff'),
+         url('fonts/fontomas-webfont.ttf') format('truetype'),
+         url('fonts/fontomas-webfont.svg#FontomasCustomRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
  
-.form-1 input[type=text] {
-    margin-bottom: 10px;
-}
-.form-1 input[type=text]:hover ~ i,
-.form-1 input[type=password]:hover ~ i {
-    color: #52cfeb;
-}
- 
-.form-1 input[type=text]:focus ~ i,
-.form-1 input[type=password]:focus ~ i {
-    color: #42A2BC;
-}
- 
-.form-1 input[type=text]:focus,
-.form-1 input[type=password]:focus,
-.form-1 button[type=submit]:focus {
-    outline: none;
-}
-.form-1 .submit {
-    /* Size and position */
-    width: 65px;
-    height: 65px;
+/** the magic icon trick ! **/
+[data-icon]:after {
+    content: attr(data-icon);
+    font-family: 'FontomasCustomRegular';
+    color: rgb(106, 159, 171);
     position: absolute;
-    top: 17px;
-    right: -25px;
-    padding: 10px;
-    z-index: 2;
- 
-    /* Styles */
-    background: #ffffff;
-    border-radius: 50%;
-    box-shadow: 
-        0 0 2px rgba(0,0,0,0.1),
-        0 3px 2px rgba(0,0,0,0.1),
-        inset 0 -3px 2px rgba(0,0,0,0.2);
+    left: 10px;
+    top: 35px;
+    width: 30px;
 }
-.form-1 .submit:after {
-    /* Size and position */
-    content: "";
-    width: 10px;
-    height: 10px;
+/*styling both submit buttons */
+#wrapper p.button input{
+    width: 30%;
+    cursor: pointer;    
+    background: rgb(61, 157, 179);
+    padding: 8px 5px;
+    font-family: 'BebasNeueRegular','Arial Narrow',Arial,sans-serif;
+    color: #fff;
+    font-size: 24px;    
+    border: 1px solid rgb(28, 108, 122);    
+    margin-bottom: 10px;    
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+    border-radius: 3px; 
+    box-shadow:
+        0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
+        0px 0px 0px 3px rgb(254, 254, 254),
+        0px 5px 3px 3px rgb(210, 210, 210);
+    transition: all 0.2s linear;
+}
+#wrapper p.button input:hover{
+    background: rgb(74, 179, 198);
+}
+#wrapper p.button input:active,
+#wrapper p.button input:focus{
+    background: rgb(40, 137, 154);
+    position: relative;
+    top: 1px;
+    border: 1px solid rgb(12, 76, 87);  
+    box-shadow: 0px 1px 6px 4px rgba(0, 0, 0, 0.2) inset;
+}
+p.login.button,
+p.signin.button{
+    text-align: right;
+    margin: 5px 0;
+}
+/* styling the checkbox "keep me logged in"*/
+.keeplogin{
+    margin-top: -5px;
+}
+.keeplogin input,
+.keeplogin label{
+    display: inline-block;
+    font-size: 12px;    
+    font-style: italic;
+}
+.keeplogin input#loginkeeping{
+    margin-right: 5px;
+}
+.keeplogin label{
+    width: 80%;
+}
+p.change_link{
     position: absolute;
-    top: -2px;
-    left: 30px;
- 
-    /* Styles */
-    background: #ffffff;
+    color: rgb(127, 124, 124);
+    left: 0px;
+    height: 20px;
+    width: 440px;
+    padding: 17px 30px 20px 30px;
+    font-size: 16px ;
+    text-align: right;
+    border-top: 1px solid rgb(219, 229, 232);
+    border-radius: 0 0  5px 5px;
+    background: rgb(225, 234, 235);
+    background: repeating-linear-gradient(-45deg, 
+    rgb(247, 247, 247) , 
+    rgb(247, 247, 247) 15px, 
+    rgb(225, 234, 235) 15px, 
+    rgb(225, 234, 235) 30px, 
+    rgb(247, 247, 247) 30px
+    );
+}
+#wrapper p.change_link a {
+    display: inline-block;
+    font-weight: bold;
+    background: rgb(247, 248, 241);
+    padding: 2px 6px;
+    color: rgb(29, 162, 193);
+    margin-left: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+    border: 1px solid rgb(203, 213, 214);
+    transition: all 0.4s  linear;
+}
+#wrapper p.change_link a:hover {
+    color: rgb(57, 191, 215);
+    background: rgb(247, 247, 247);
+    border: 1px solid rgb(74, 179, 198);
+}
+#wrapper p.change_link a:active{
+    position: relative;
+    top: 1px;
+}
+#register{  
+    z-index: 21;
+    opacity: 0;
+}
+#toregister:target ~ #wrapper #register,
+#tologin:target ~ #wrapper #login{
+    z-index: 22;
+    animation-name: fadeInLeft;
+    animation-delay: .1s;
+}
+.animate{
+    animation-duration: 0.5s;
+    animation-timing-function: ease;
+    animation-fill-mode: both;
+}
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
      
-    /* Other masks trick */
-    box-shadow: 0 62px white, -32px 31px white;
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
-.form-1 button {
-    /* Size and position */
-    width: 100%;
-    height: 100%;
-    margin-top: -1px;
- 
-    /* Icon styles */
-    font-size: 1.4em;
-    line-height: 1.75;
-    color: white;
- 
-    /* Styles */
-    border: none; /* Remove the default border */
-    border-radius: inherit;
-    background: linear-gradient(#52cfeb, #42A2BC);
-    box-shadow: 
-        inset 0 1px 0 rgba(255,255,255,0.3),
-        0 1px 2px rgba(0,0,0,0.35),
-        inset 0 3px 2px rgba(255,255,255,0.2),
-        inset 0 -3px 2px rgba(0,0,0,0.1);
- 
-    cursor: pointer;
-}
-.form-1 button:hover,
-.form-1 button[type=submit]:focus {
-    background: #52cfeb;
-    transition: all 0.3s ease-out;
+#toregister:target ~ #wrapper #login,
+#tologin:target ~ #wrapper #register{
+    animation-name: fadeOutLeftBig;
 }
  
-.form-1 button:active {
-    background: #42A2BC;
-    box-shadow: 
-        inset 0 0 5px rgba(0,0,0,0.3),
-        inset 0 3px 4px rgba(0,0,0,0.3);
+@keyframes fadeOutLeft {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+     
+    100% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
 }
